# MavizOS

./: .env.example  .gitignore  INSTALL.md  INSTALL_BOOTGUARD.md  Prompt.md  README.md  README_BOOTGUARD.md  Steps to run.md  pyproject.toml  requirements-bootguard.txt  requirements.txt
bootguardai/: __init__.py  __main__.py  boot.py  config.py  main.py
bootguardai/agents/: __init__.py  base.py  bootloader_integrity.py  firmware_uefi.py  forensics_timeline.py  kernel_analysis.py  linux_boot.py  memory_knowledge.py  mitre_persistence.py  persistence_hunt.py  remediation.py  reporting.py  rootkit_bootkit.py  script_command.py  windows_boot.py
bootguardai/api/: __init__.py  routes.py
bootguardai/integrations/: __init__.py  base.py  mock.py  stubs.py
bootguardai/knowledge/: __init__.py  boot_flows.py
bootguardai/memory/: __init__.py  store.py
bootguardai/models/: __init__.py  agent_result.py  boot_alert.py  boot_report.py  workflow.py
bootguardai/orchestrator/: __init__.py  orchestrator.py
bootguardai/os/: __init__.py
bootguardai/security/: __init__.py  approval.py  audit.py
bootguardai/workflows/: __init__.py  boot_analysis.py
etc/mavizos/: config.json
install/iso/: Dockerfile.builder  README-ISO.md  build-iso.ps1  build-iso.sh
install/linux/: install.sh  mavizos-getty.service  (+2 more)
mavizos/: __init__.py  __main__.py  boot.py  config.py  main.py
scripts/: bootguard_demo.py  demo.py  os_demo.py
tests/: conftest.py  test_bootguard_e2e.py  test_bootguard_install_scripts.py  test_bootguard_os.py  test_e2e.py  test_install_scripts.py  test_os.py
(+99 files in other folders)
